2025-09-11T01:56:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17631687030 # 1215
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-11
* notice: last 14d: unq all: 17 54
* notice: prev accum: outdated-unq outdated-all / unq all: 1186 5838 / 1206 5894
* notice: next accum: outdated-unq outdated-all / unq all: 1188 5840 / 1206 5894
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-27] / []

2025-09-10T01:53:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17600677709 # 1213
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-10
* notice: last 14d: unq all: 19 56
* notice: prev accum: outdated-unq outdated-all / unq all: 1185 5837 / 1205 5892
* notice: next accum: outdated-unq outdated-all / unq all: 1186 5838 / 1206 5894
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-08-26] / [2025-09-09]

2025-09-08T12:54:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17551482357 # 1210
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-08
* notice: last 14d: unq all: 19 55
* notice: prev accum: outdated-unq outdated-all / unq all: 1184 5836 / 1205 5892
* notice: next accum: outdated-unq outdated-all / unq all: 1185 5837 / 1205 5892
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-25] / []

2025-09-08T02:01:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17537414045 # 1209