@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-11T01:56:30Z",
+  "timestamp" : "2025-09-12T01:51:58Z",
   "count_outdated" : 5840,
   "uniques_outdated" : 1188,
-  "count" : 5894,
-  "uniques" : 1206,
+  "count" : 5895,
+  "uniques" : 1207,
   "views" : [
     {
       "timestamp": "2025-08-29T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-09-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
