@@ -1,6 +1,6 @@
 {
-  "count": 54,
-  "uniques": 17,
+  "count": 55,
+  "uniques": 18,
   "views": [
     {
       "timestamp": "2025-08-29T00:00:00Z",
@@ -50,6 +50,11 @@
     {
       "timestamp": "2025-09-09T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-11T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
